FIX: fix styles on mobile

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -31,6 +31,11 @@
   .about {
     padding-top: 25%;
     padding-bottom: 25%;
+
+    p{
+      text-align: center;
+      padding: 0px 20px 0px 20px;
+    }
   }
 }
 
