--- a/src/styles/More.scss
+++ b/src/styles/More.scss
@@ -71,6 +71,11 @@
 
     &--text{
       padding-bottom: 10%;
+
+      p{
+        text-align: center;
+        padding: 0px 20px 0px 20px;
+      }
     }
   }
 }
@@ -90,6 +95,11 @@
 
     &--text{
       padding-bottom: 10%;
+
+      p{
+        text-align: center;
+        padding: 0px 20px 0px 20px;
+      }
     }
   }
 }
